# datavir

./: .gitignore  Cargo.toml  DESIGN.md  DESIGN.old.md  MESSAGES.md  README.md  TASKLIST.md  TODO.md  messages.asn1  schema-v1.sql  schema.sql
datavir-fuse/: .gitignore  Cargo.toml  example.toml
datavir-fuse/src/: bundle.rs  bundle_file.rs  datavir_fs.rs  inode_record.rs  main.rs  node_type.rs  object_type.rs  prelude.rs  schema.rs
old/: .gitignore
old/datavir-fuse/src/: schema.rs
src/: api_draft.rs  core.rs  core_types_draft.rs  files.rs  fuse_adapter.rs  lib.rs  main.rs  messages.md  prelude.rs  schema.rs  utils.rs  ws_client.rs  ws_server.rs
