[package]
name = "datavir"
version = "0.1.0"
authors = ["G. Queiroz <gabrieljvnq@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
description = "A next generation file system and manager."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.0.5", features = ["cargo"] }
fern = { version = "0.6.0", features = ["colored"] }
fuser = "0.10.0"
libc = "0.2.112"
log = "0.4.14"
rusqlite = { version = "0.26.3", features = ["backup", "blob", "chrono", "url", "hooks", "uuid"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
toml = "0.5.8"
uuid = { version = "0.8.2", features = ["serde", "v4", "v5", "v1"] }
rand = "0.8.4"