[package]
name = "datavir-fuse"
version = "0.1.0"
authors = ["G. Queiroz <gabrieljvnq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33.3"
fern = { version = "0.6.0", features = ["colored"] }
fuser = "0.6.0"
libc = "0.2.51"
log = "0.4.11"
rusqlite = { version = "0.24.1", features = ["backup", "blob", "chrono", "url", "hooks", "uuid"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
